fixed canvas alignement

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ html, body {
   padding: 0;
 }
 canvas {
-  display: block;
-  margin: 200px auto;
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin:auto;
 }
